--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "skillsphere_website",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,5 +11,6 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^5.1.0"
-  }
+  },
+  "description": ""
 }
